shared/src/commonMain/kotlin/com/example/osmapi/core/common/errors/OsmNotFoundException.kt
package com.example.osmapi.core.common.errors

class OsmNotFoundException: OsmApiException() {
}